css/newcss.css
* {
    box-sizing: border-box;
}

html,body {
    margin: 0;
    width: 100%;
    height: 100%;
    -webkit-box-sizing: border-box;
    position: relative;
    overflow-x: hidden;
}



img{
    width: 100%;
    height: 100%;
    object-fit: cover;

}
h3{
    text-align: center;
}

.container{
    width: 100%;

}
#hideAll
{
    position: fixed;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
    background-color: #fcf4f6;
    z-index: 99; /* Higher than anything else in the document */

}
#left-half{
    position: absolute;
    left: 0px;
    width: 50%;
    background-color: black;
    height: 100%;
}

a{
    text-decoration: none;
    color: firebrick;
}

a:hover{
     color: lightpink;
 }

#right-half{
    position: absolute;
    right: 0px;
    width: 50%;
    height: 100%;
    background-color: #fcf4f6;
    padding-left: 3%;
    padding-right: 3%;
}

#right-half h4{
    text-align: justify;
    padding-top: 40%;

}

 #all-projects{
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr 1fr;
     padding-left: 7%;
     position: relative;
}

 .projects{
     padding-top: 13%;
 }
 .proj-bottom{
     padding-top: 30%;
     padding-bottom: 10%;
 }
 .project-text{
     text-align:justify;
     color: firebrick;
     font-weight: bold;
     }

#project-title{
    color:firebrick;
}
.project-info{
    width: 60%;
    font-size: 10px;
    margin-top: -4%;
    margin-bottom: 5%;
}
img.project-img{
    top: 0;
    left: 0;
    width: 280px;
    height: 70%;
}


ul{
    padding-top: 7%;
    list-style-type: none;
    text-align: center;
}

ul li{
    display: inline;
    padding: 10%;
}

.index-footer, .project-footer{
    margin:0;
    padding: 0;
    left: 0;
    bottom: 0;
    overflow-y: hidden;

}
.index-footer{
    position: fixed;
    width: 100vw;
    /*height: 100vh;*/
}


img.logo{
    width: 90px;
    height: 60px;
    text-align: center;
    margin-top: 2.5%;
}

.center-block {
    display: block;
    margin-left: auto;
    margin-right: auto;
}


.socials {
    width: 100%;
    text-align: center;
    background-color: #a5807d;
}

.socials div {
    display: inline-block;
    padding-top: 1%;
    padding-left: 2%;

}

.social-link img {
    width: 30px;
    height: 30px;
}
/****************** RESPONSIVE MOBILE DESIGN ******************/


@media screen and (max-width: 440px){
    #all-projects{
        margin-left: 6%;
    }

    ul{
        padding-top: -3%;
    }

    ul li{
        padding: 5%;

    }
    .projects{
        margin-left: -10%;
    }
}

@media screen and (min-width: 650px) and (max-width: 990px){
    #all-projects{
        grid-template-columns: 1fr 1fr;
    }

    ul li{

        padding: 4%;
    }
    #right-half h4{
        font-size: 20px;
    }
}


@media screen and (min-width: 441px) and (max-width: 649px){
    ul li{
        padding: 7%;
    }

}

@media screen and (min-width: 650px){
    #right-half h4{
        padding-top: 40vh;
    }
}


@media screen and (max-width: 649px){
    #all-projects{
        grid-template-columns: 1fr;
        margin-left: 12%;
    }
    #left-half, #right-half{
        padding: 0;
        margin: 0 auto;
        top: 0;
        position: relative;
        width: 100%;
        overflow: hidden;
        height: 50vh;
    }

    #right-half h4{
        font-size: 15px;
        margin-top: 25%;
        padding: 5%;
    }

    ul{
        margin-left: -10%;
    }
}

